compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_constant_shadowing_module.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\nimport gleam/list\n\nconst list = []\n\npub fn main() {\n  list.map(todo, todo)\n}\n    "
---
----- BEFORE RENAME
-- app.gleam

import gleam/list

const list = []
      ↑

pub fn main() {
  list.map(todo, todo)
}



----- AFTER RENAME
-- app.gleam

import gleam/list

const empty_list = []

pub fn main() {
  list.map(todo, todo)
}
