compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__rename__rename_local_variable.snap
---
source: compiler-core/src/language_server/tests/rename.rs
expression: "\npub fn main() {\n  let wibble = 10\n  wibble\n}\n"
---
----- BEFORE RENAME

pub fn main() {
  let wibble = 10
  wibble
  ↑     
}


----- AFTER RENAME

pub fn main() {
  let wobble = 10
  wobble
}
